@@ -37,7 +37,7 @@ EOBJ    = avg.o band.o bandpass.o breject.o btrworth.o chorus.o compand.o \
           copy.o cut.o deemphas.o echo.o echos.o filter.o flanger.o \
           highp.o highpass.o lowp.o lowpass.o map.o mask.o pan.o \
           phaser.o pick.o polyphas.o rate.o resample.o reverb.o \
-          reverse.o split.o stat.o swap.o vibro.o vol.o
+          reverse.o speed.o split.o stat.o swap.o vibro.o vol.o
 
 SOUNDLIB = libst.a
 LIBOBJS = $(FOBJ) $(EOBJ) handlers.o libst.o misc.o util.o getopt.o
